# Course_work

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run.sh
backups/: MainWindow.hpp.bak  main.cpp.bak
config/: config.docker.json  config.example.json  config.json  config.json.template
scripts/: build.sh  db_apply.sh  db_up.sh  init_db.sh  package_release.sh
sql/: 001_schema.sql  002_sp.sql  003_fix_sp.sql  004_groups_and_assignment_groups.sql
src/: main.cpp
src/auth/: AuthManager.cpp  AuthManager.hpp  PasswordUtils.cpp  PasswordUtils.hpp
src/config/: ConfigManager.cpp  ConfigManager.hpp
src/crypto/: FileCrypto.cpp  FileCrypto.hpp  KeyProtect.cpp  KeyProtect.hpp
src/db/: Database.cpp  Database.hpp
src/gui/: AdminWindow.cpp  AdminWindow.cpp.bak  AdminWindow.hpp  AssignmentDetailDialog.cpp  AssignmentDetailDialog.hpp  CreateUserDialog.cpp  CreateUserDialog.hpp  LoginWindow.cpp  LoginWindow.hpp  MainWindow.cpp  MainWindow.cpp.bak  MainWindow.hpp  StudentWindow.cpp  StudentWindow.cpp.bak  StudentWindow.hpp  TeacherWindow.cpp  TeacherWindow.hpp
src/tools/: create_admin.cpp  create_submission.cpp
src/ui/: LoginWindow.cpp  LoginWindow.h  ToggleSwitch.cpp  ToggleSwitch.h
src/utils/: Logger.cpp  Logger.hpp
storage/assignments/: 4f2b29172db5337980e2c37bf8990e08_CMakeLists.txt
style/: dark.qss  light.qss
tools/: pbkdf2_gen.cpp
